# fib-api

./: .gitignore  INTERVIEW.md  README.md
.github/workflows/: action-docker-build.yaml  action-helm-deploy.yaml  action-python-checks.yaml  wflow-main-build.yml
chart/: Chart.yaml  values.yaml
chart/templates/: NOTES.txt  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml
python/: .dockerignore  Dockerfile  Makefile  README.md  pyproject.toml
python/app/: fibonacci.py  logging.py  main.py
python/tests/: test_fibonacci.py
