[tool.poetry]
name = "app"
version = "0.1.0"
description = "Web API to serve Fibonacci sequences"
authors = ["Jonathan Hickman"]
readme = "README.md"

packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.13"
structlog = "^25.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
black = "^25.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py310"]
